fix button hover shifting layout

--- a/portfolio_resources/scss/_utilities.scss
+++ b/portfolio_resources/scss/_utilities.scss
@@ -9,7 +9,7 @@
     display: inline-block;
     padding: 0.8rem 2rem;
     transition: all 0.5s;
-    border: none;
+    border: 1px transparent solid;
     cursor: pointer;
 }
 
